--- a/DAY06PythonII-1/src/.env
+++ b/DAY06PythonII-1/src/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=6203547464:AAEjlm4moa4skQr_GF7QIyCCBl5roeMRpLI
+BOT_TOKEN=
 DB_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/postgres
